@@ -8,6 +8,7 @@ Version 5.1.0
 - Fixed type of RECV() pointer in Spin2
 - Implemented FRAC operator for P1
 - Implemented new (more accurate) IEEE floating point math routines
+- Increased default buffer size for I/O on P2 (speeds up 9p operations)
 - Made "append" mode force seeks to end of file before writes
 - New functions __builtin_frac, __builtin_mulh and __builin_muluh for C
 
